tests/should_fail/type_let_annotation_mismatch.nv
module main

// SHOULD FAIL: annotated let where annotation type contradicts expression type
let x: String = 42
println(x)
